--- a/VCFv4.3.tex
+++ b/VCFv4.3.tex
@@ -5,7 +5,6 @@
 \usepackage{lscape}
 \usepackage[margin=0.75in]{geometry}
 \usepackage[pdfborder={0 0 0}]{hyperref}
-%\usepackage{showframe}
 
 \usepackage{listings}
 \lstset{
@@ -88,7 +87,7 @@ Characters with special meaning (such as field delimiters ';' in INFO or ':' FOR
 \%2C  &  ,  & (comma)                \\
 \%0D  & CR  &                        \\
 \%0A  & LF  &                        \\
-\%09  & TAB & 
+\%09  & TAB &
 \end{tabular}
 \endgroup
 
@@ -171,29 +170,46 @@ Genotype fields specified in the FORMAT field are described as follows:
 Possible Types for FORMAT fields are: Integer, Float, Character, and String (this field is otherwise defined precisely as the INFO field).
 
 \subsubsection{Alternative allele field format}
-Symbolic alternate alleles are described as follows:
+Symbolic alternate alleles specified in the ALT field are described as follows:
 \begin{verbatim}
 ##ALT=<ID=type,Description=description>
 \end{verbatim}
 
 \noindent \textbf{Structural Variants} \newline
-In symbolic alternate alleles for imprecise structural variants, the ID field indicates the type of structural variant, and can be a colon-separated list of types and subtypes.
+In symbolic alternate alleles for structural variants, the ID field indicates the type of structural variant, and can be a colon-separated list of types and subtypes.
 ID values are case sensitive strings and must not contain whitespace or angle brackets.
 The first level type must be one of the following:
 \begin{itemize}
   \item DEL Deletion relative to the reference
-  \item INS Insertion of novel sequence relative to the reference
+  \item INS Insertion relative to the reference
   \item DUP Region of elevated copy number relative to the reference
   \item INV Inversion of reference sequence
-  \item CNV Copy number variable region (may be both deletion and duplication)
+  \item CNV Copy number variable region (multiallelic)
+  \item BND Breakend
 \end{itemize}
 
-The CNV category should not be used when a more specific category can be applied. Reserved subtypes include:
-\begin{itemize}
-  \item DUP:TANDEM Tandem duplication
-  \item DEL:ME Deletion of mobile element relative to the reference
-  \item INS:ME Insertion of a mobile element relative to the reference
-\end{itemize}
+\noindent Variant subtypes should be used for maximum specificity. Reserved subtypes include:
+\newline
+
+\begin{tabular}{l l}
+DEL:ME  &  Absence of mobile element present in the reference \\
+DEL:ME:ALU  &  Absence of Alu element present in the reference \\
+DEL:ME:LINE1  &  Absence of LINE1 element present in the reference \\
+DEL:ME:SVA  &  Absence of SVA element present in the reference \\
+DEL:ME:HERV  &  Absence of HERV element present in the reference \\
+\\
+INS:ME  &  Insertion of mobile element relative to the reference \\
+INS:ME:ALU  &  Insertion of Alu element relative to the reference \\
+INS:ME:LINE1  &  Insertion of LINE1 element relative to the reference \\
+INS:ME:SVA  &  Insertion of SVA element relative to the reference \\
+INS:ME:HERV  &  Insertion of HERV element relative to the reference \\
+\\
+DUP:TANDEM  &  Tandem duplication, original orientation \\
+DUP:TANDEM:INV:LEFT  &  Tandem duplication to left of original, inverted orientation \\
+DUP:TANDEM:INV:RIGHT  &  Tandem duplication to right of original, inverted orientation \\
+\end{tabular}\newline
+
+See examples below for further guidance.
 
 \bigskip
 
@@ -481,7 +497,7 @@ See also Section~\ref{sv-format-keys} for a list of genotype keys reserved for s
                0   & 0 &   &   &   \\
                1   & 1 & 2 &   &   \\
                2   & 3 & 4 & 5 &   \\
-               3   & 6 & 7 & 8 & 9 
+               3   & 6 & 7 & 8 & 9
             \end{tabular}
             }
     \end{itemize}
@@ -537,79 +553,36 @@ When a key reflects a property of a single alt allele (e.g. SVLEN), then when th
 ##INFO=<ID=END,Number=1,Type=Integer,Description="End position of the variant described in this record">
 \end{verbatim}
 \normalsize
-For precise variants, END is POS + length of REF allele - 1.
+For precise variants, END is POS + length of REF allele - 1, and the for imprecise variants, END is the corresponding best estimate.
 
 \footnotesize
 \begin{verbatim}
 ##INFO=<ID=SVTYPE,Number=1,Type=String,Description="Type of structural variant">
 \end{verbatim}
 \normalsize
-SVTYPE is required for all structural variants. The following reserved values should be used whenever possible; indented values are subtypes that should be used if evidence supports them (see examples in Section 5.3, Encoding Structural Variants):\vspace{0.3cm}\\
-\setlength{\parindent}{0.3cm}
-\indent INS:  Insertion relative to the reference\\
-\indent \indent MEI:  Mobile element insertion relative to the reference\\
-\indent \indent \indent ALU:  Alu mobile element insertion relative to the reference\\
-\indent \indent \indent LINE1:  LINE1 mobile element insertion relative to the reference\\
-\indent \indent \indent SVA:  SVA mobile element insertion relative to the reference\\
-\indent \indent \indent HERV:  HERV mobile element insertion relative to the reference\\
-\indent \indent RET:  Retrotransposon insertion relative to the reference\\
-\indent DEL:  Deletion relative to the reference\\
-\indent \indent -MEI:  Absence of a mobile element present in the reference\\
-\indent \indent \indent -ALU:  Absence of a Alu mobile element present in the reference\\
-\indent \indent \indent -LINE1:  Absence of a LINE1 mobile element present in the reference\\
-\indent \indent \indent -SVA:  Absence of a SVA mobile element present in the reference\\
-\indent \indent \indent -HERV:  Absence of a HERV mobile element present in the reference\\
-\indent \indent -RET:  Absence of a retrotransposon present in the reference\\
-\indent TRA:  Translocation\\
-\indent STR:  Short tandem repeat variation\\
-\indent INV:  Inversion relative to the reference\\
-\indent DUP:  Duplication\\
-\indent \indent TANDUP:  Tandem duplication - Direct, Inverted-downstream, or Inverted-upstream\\
-\indent \indent DISDUP:  Dispersed duplication\\
-\indent DELINS:  Deletion-insertion (replacement of reference sequence with sequence of different content or length)\\
-\indent OTHER:  Complex variant not covered elsewhere\\
-\indent \indent DEL\_DUP:  Deletion + Duplication\\
-\indent \indent DEL\_INV:  Deletion + Inversion\\
-\indent \indent DUP\_INV:  Duplication + Inversion\\
-\indent \indent DEL\_DUP\_INV:  Deletion + Duplication + Inversion\\
-\indent CNV:  Copy number variation\vspace{0.3cm}\\
-TRA (Translocation):  A VCF translocation record describes the juxtaposition of two DNA segments from disparate genomic locations (from the same or from different chromosomes). It must include two genomic coordinates, each accompanied by an orientation (see STRAND below). A VCF translocation record only describes the immediate molecular context of the novel adjacency generated by the translocation event. It should not be confused with the traditional cytogenetic notion of translocation, which is understood to imply that the remainder of the chromosome arms beyond the specified breakpoints are also involved.\vspace{0.3cm}\\
-\setlength{\parindent}{0.3cm}
-\indent In a TRA VCF record:\vspace{0.3cm}\\
-\indent CHROM = chromosome of the first breakpoint\\
-\indent POS = coordinate of the first breakpoint\\
-\indent CHR2 = chromosome of 2nd breakpoint\\
-\indent END = coordinate of 2nd breakpoint\\
-\indent STRAND = (head-tail, tail-head, head-head, tail-tail)\\
-\indent REF = reference base at position CHROM:POS\\
-\indent ALT = reference base at position CHR2:END\vspace{0.3cm}\\
-STR (Short tandem repeat variation, simple sequence repeat, microsatellite): Short tandem repeat variants may be represented in VCF either as structural variants or as ordinary indels (see Section 5.3 for examples). The \textbf{Pindel} software package, for example, treats STRs as standard variants, while \textbf{lobSTR} treats them as structural variants. When treated as structural variants:\vspace{0.3cm}\\
-\indent RPA = repeats per allele\\
-\indent END = end coordinate of the STR\\
-\indent MOTIF = the canonicalized STR repeat motif\\
-\indent NS = number of samples with data\\
-\indent REF = the reference copy number\\
-\indent RL = total length of the STR tract in the reference\\
-\indent RU = repeat motif as it appears on the forward strand in the reference\vspace{0.3cm}\\
-\indent More information on representing STRs in VCF can be found at http://lobstr.teamerlich.org/file-formats.html\vspace{0.3cm}\\
-INV (Inversion):  Describing a canonical inversion is straightforward: it is the excision of a sequence followed by its reinsertion at the same location in reverse orientation. However, actual biological inversions are almost always more complex, involving loss or gain of material at breakpoints, and often co-occurring with secondary SV events such as deletions or duplications. See SVTYPE OTHER for more information.\\
-\\
-DUP (Duplication):  A region of elevated copy number relative to the reference. Depending on the methods by which a given duplication was ascertained, its location and orientation in relation to the reference may or may not be known. If it was detected by read depth analysis or microarray, the location of the duplicate copy in the non-reference genome is probably unknown. The following SVTYPEs are preferred over DUP because they provide more information:\vspace{0.3cm}\\
-\indent TANDUP (Tandem duplication): A duplication located immediately adjacent to the original copy. The position and orientation of the duplicate, if known, should be specified with the TDLOC tag.\vspace{0.3cm}\\
-\indent DISDUP (Dispersed duplication): A duplication located somewhere other than immediately adjacent to the original copy.\\
+SVTYPE is a primitive basic data type and must be specified for all structural variants. Its value can usually be deduced from the REF and ALT fields, however despite this redundancy it is quite useful for filtering. For each VCF record, SVTYPE must be assigned exactly one of the following values:
+
+\begin{itemize}
+\item DEL:  Deletion relative to the reference
+\item INS:  Insertion relative to the reference
+\item DUP:  Region of elevated copy number relative to the reference
+\item INV:  Inversion of reference sequence
+\item CNV:  Copy number variable region (multiallelic)
+\item BND:  Breakend
+\end{itemize}
+
+
 \footnotesize
 \begin{verbatim}
 ##INFO=<ID=SVLEN,Number=.,Type=Integer,Description="Difference in length between REF and ALT alleles">
 \end{verbatim}
 \normalsize
-One value for each ALT allele. ALT alleles that are longer than the reference (e.g. insertions) have positive values, while those shorter than the reference (e.g. deletions) have negative values.
+SVLEN indicates the relative size of the ALT allele compared to the REF allele. If ALT is longer than REF (e.g. insertions), SVLEN must be positive; if ALT is shorter than REF (e.g. deletions), SVLEN must be negative. One SVLEN value for each ALT allele.
 
 \footnotesize
 \begin{verbatim}
 ##INFO=<ID=CIPOS,Number=2,Type=Integer,Description="Confidence interval around POS for imprecise variants">
 ##INFO=<ID=CIEND,Number=2,Type=Integer,Description="Confidence interval around END for imprecise variants">
-##INFO=<ID=CIVALUE,Number=,Type=Float,Description="Degree of certainty expressed by CIPOS/CIEND: `1' indicates 100% certainty
-       that a breakpoint falls within confidence interval; default value is `0.95'">
 ##INFO=<ID=HOMLEN,Number=.,Type=Integer,Description="Length of base pair identical micro-homology at event breakpoints">
 ##INFO=<ID=HOMSEQ,Number=.,Type=String,Description="Sequence of base pair identical micro-homology at event breakpoints">
 ##INFO=<ID=BKPTID,Number=.,Type=String,Description="ID of the assembled alternate allele in the assembly file">
@@ -620,8 +593,6 @@ However, the alternate allele assembly file may contain additional information a
 
 \footnotesize
 \begin{verbatim}
-##INFO=<ID=TDLOC,Number=1,Type=String,Description="Position and orientation of tandem duplication; must be one of 
-       (Direct, Inverted-downstream, or Inverted-upstream)">
 ##INFO=<ID=MEINFO,Number=4,Type=String,Description="Mobile element info of the form NAME,START,END,POLARITY">
 ##INFO=<ID=METRANS,Number=4,Type=String,Description="Mobile element transduction info of the form CHR,START,END,POLARITY">
 ##INFO=<ID=DGVID,Number=1,Type=String,Description="ID of this element in Database of Genomic Variation">
@@ -1721,7 +1692,7 @@ This is simply a string of size 0 = 0x07.
 \vspace{0.3cm}
 In VCF there are sometimes fields of type list of strings, such as a number field of unbounded size encoding the amino acid changes due to a mutation.
 Since BCF2 doesn't directly support vectors of strings (a vector of character is already a string) we collapse the list of strings into a single comma-separated string, encode it as a regular BCF2 vector of characters, and on reading explode it back into the list of strings.
-This works because strings in VCF cannot contain `{ \tt ,}' (it's a field separator) and so we can safely use `{\tt ,}' to separate the individual strings. 
+This works because strings in VCF cannot contain `{ \tt ,}' (it's a field separator) and so we can safely use `{\tt ,}' to separate the individual strings.
 
 % String vectors in BCF do not need to start with comma, as the number of
 % values is indicated already in the definition of the tag in the header.
@@ -2096,7 +2067,7 @@ Therefore, also \#\#PEDIGREE newly requires a unique ID.
 \begin{itemize}
 \item BCF header lines can include optional IDX field
 \item We introduce END\_OF\_VECTOR byte and reserve 8 values for future use
-\item Clarified that except the END\_OF\_VECTOR byte, no other negative values are allowed in the GT array 
+\item Clarified that except the END\_OF\_VECTOR byte, no other negative values are allowed in the GT array
 \item String vectors in BCF do not need to start with comma, as the number of values is indicated already in the definition of the tag in the header.
 \item The implicit filter PASS was described inconsistently throughout BCFv2.1: It is encoded as the first entry in the dictionary, not the last.
 \end{itemize}
