--- a/SAMtags.tex
+++ b/SAMtags.tex
@@ -259,7 +259,7 @@ In the case of multiple unique molecular identifiers (e.g., one on each end of t
 \item[CB:Z:\tagvalue{str}]
   Cell identifier based on the (possibly corrected) cellular-barcode
   sequence ({\tt CR}). The sequence may optionally be followed by a
-  dash ('-') and one or more alphanumeric characters to form an
+  dash (`{\tt -}') and one or more alphanumeric characters to form an
   identifier. The respective quality scores are (optionally) stored in
   the {\tt CY} tag. All reads with the same {\tt CB} tag putatively
   derive from the same cell.
