--- a/SAMtags.tex
+++ b/SAMtags.tex
@@ -256,15 +256,10 @@ Same encoding as {\sf QUAL}, i.e., Phred score + 33.
 In the case of multiple unique molecular identifiers (e.g., one on each end of the template) the recommended implementation concatenates all the quality strings with spaces (`{\tt \textvisiblespace}') between the different strings from the same template. 
 
 \item[CB:Z:\tagvalue{str}]
-  Cell identifier based on the (possibly corrected) cellular-barcode
-  sequence ({\tt CR}). The sequence may optionally be followed by a
-  dash (`{\tt -}') and one or more alphanumeric characters to form an
-  identifier. All reads with the same {\tt CB} tag putatively
-  derive from the same cell.
+Cell identifier based on the (possibly corrected) cellular-barcode sequence ({\tt CR}). The sequence may optionally be followed by a dash (`{\tt -}') and one or more alphanumeric characters to form an identifier. All reads with the same {\tt CB} tag putatively derive from the same cell.
 
 \item[CR:Z:\tagvalue{str}]
-  Cellular barcode.
-  Sequence bases of the cellular-barcode as reported by the sequencer (uncorrected) with the respective quality scores stored in {\tt CY}. All reads with the same {\tt CR} tag putatively derive from the same cell. 
+Cellular barcode. Sequence bases of the cellular-barcode as reported by the sequencer (uncorrected) with the respective quality scores stored in {\tt CY}. All reads with the same {\tt CR} tag putatively derive from the same cell. 
 
 \item[CY:Z:\tagvalue{qualities+}] 
 Phred quality of the cellular-barcode sequence in the {\tt CB} (or {\tt CR}) tag. 
